Worked on main index page. Updated the About Me. Restyled the skills icons. Set media query, focusing on main page only. Having trouble with the skills icons, getting them to wrap over. Also the background of flickering text. Recolored Who I am and What I Bring section. Fixed links in carousel with help, and removed the accordian section.

--- a/projects.css
+++ b/projects.css
@@ -4,6 +4,22 @@
 /* Google Fonts - Playfair Display Designed by Claus Eggers Sørensen  */
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap");
 
+/* links */
+
+a:link{
+  color: #fff;
+  text-decoration: none;  
+}  
+a:visited {
+  color: #fff;
+}
+a:hover{
+  color: #fff;
+}
+a:active{
+  color: #fff;
+}
+
 
 /* NAVBAR STYLING */
 .navbar-brand {
