--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
   justify-content: center;
   align-items: center;
   /* So the text does NOT go right up against the edge on smaller screen sizes.  */
-  /* padding: 0 20px; */
+  padding: 0 20px;
 }
 
 #tv {
@@ -40,7 +40,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(cover.png);
   background-color: black;
   background-repeat: no-repeat;
   background-position: center;
@@ -271,18 +270,119 @@
 }
 
 
+
+/* Skills Icons */
+.skillsIcons {
+  width: 100vw;
+  margin: 100px 0px;
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-auto-rows: 250px;
+  color: rgb(119, 180, 124);
+}
+
+
+#html {
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+#css {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+#js {
+    grid-column-start: 3;
+    grid-column-end: 4;
+}
+#sass {
+    grid-column-start: 4;
+    grid-column-end: 5;
+}
+#bootstrap {
+  grid-column-start: 5;
+  grid-column-end: 6;
+}
+
+#chrome {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+
+#github {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2;
+
+}
+
+#react {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 2;
+
+}
+
+#npm {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start: 2;
+  grid-row-end: 2;
+}
+
+#axios {
+  grid-column-start: 5;
+  grid-column-end: 6;
+  grid-row-start: 2;
+  grid-row-end: 2;
+}
+
+#node {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 3;   
+}
+#jsExpress {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 3;
+
+}
+#mongoDB {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 3;
+}
+#sql {
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 3;
+
+}
+#python {
+  grid-column-start: 5;
+  grid-column-end: 6;
+  grid-row-start: 3;
+  grid-row-end: 3;
+}
+
+
 /* SKILLS AND ABOUT SECTION */
 #about {
-  margin-top: 15%;
+  margin-top: 12%;
   padding: 50px;
   text-align: center;
   font-family: "Playfair Display", serif;
+  background-color: rgb(223, 236, 224);
 }
-
-/* #bio {
-    line-height: 2;
-    letter-spacing: .6px;
-} */
 
 #vestpic {
   font-size: 10px;
@@ -317,6 +417,7 @@
   border-width: 4px !important;
   border-color: rgb(119, 121, 119) !important;
 }
+
 
 
 /* Footer Section */
@@ -483,3 +584,53 @@
     font-weight:600
   }
 }
+
+/* MEDIA QUERIES */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  #name,#tv, .sign {
+    font-size: 11vmin;
+      }
+      #pictures {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+}
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 800px) {
+  #name,#tv, .sign {
+    font-size: 11vmin;
+  }
+
+  #pictures {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#boxes {
+  font-size: xx-small;
+  
+
+  }
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 1000px) {
+  #pictures {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+/* @media only screen and (min-width: 992px) {...} */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+/* @media only screen and (min-width: 1200px) {
+  
+}  */
